# etc

./: AGENTS.md
TheJackStack/: .gitignore  404.html  _config.yml  gulpfile.js  index.html  package.json  readme.md
TheJackStack/_includes/: footer.html  head.html
TheJackStack/_layouts/: default.html
TheJackStack/_scripts/: react.js
TheJackStack/_styles/: _global.scss  _reset.scss  _settings.scss  style.scss
bearbug.co/: .gitignore  app.js  gulpfile.js  package.json  readme.md  theme.html
bearbug.co/js/: events.js  morph.js
bearbug.co/styles/: _colours.scss  _reset.scss  style.scss
buzz-words/: index.js  package.json  readme.md  wordList.js
dish./: .gitignore  gulpfile.js  index.html  package.json
dish./meteor/: README.md  main.html  mup.json  settings.json
downscale/: .gitignore  prompt.txt  pyproject.toml
downscale/downscale/: __init__.py  config.py  database.py  log_setup.py  main.py  scanner.py  tasks.py  transcoder.py  ui.py
golf/: .gitignore  README.md  bot_api.py  bot_serialization.py  bot_strategy.md  main.py  pyproject.toml
golf/.github/workflows/: ci.yml
golf/tests/: __init__.py  test_bot_api.py  test_bot_serialization.py  test_golf.py
modem/: .gitignore  CSS_PLAN.md  PLAN.md  README.md  pyproject.toml
modem/apps/: recv_text.py  recv_text_css.py  send_text.py  send_text_css.py
modem/modem/: __init__.py  afsk.py  config.py  crypto.py  css.py  css_rx.py  fec_conv.py  framing.py  rx.py  tx.py  utils.py
modem/tests/: test_afsk_loopback.py  test_crc.py  test_css.py  test_framing.py  test_rx.py  test_rx_stream.py  test_tx.py
old-personal-website-1/: gulpfile.js  index.html  package.json  readme.md  style.css
old-personal-website-1/styles/: _global.css  _scroll.css  _settings.css  style.css
old-personal-website-2/: 404.html  CNAME  _config.yml  app.js  gulpfile.js  index.html  package.json  readme.md
old-personal-website-2/_includes/: footer.html  head.html  header-home.html  header-page.html
old-personal-website-2/_layouts/: default.html  post.html  work.html
old-personal-website-2/_posts/: 2014-10-08-music-is-changing.md  2014-11-27-confessions-of-a-news-addict.md  2015-03-02-negated-subject.md  2015-03-02-rhizome.md  2015-03-10-dish.md  2015-06-25-web-to-native.md  2015-06-29-tweaks-to-twitter.md  2015-08-28-fat-internet-historian.md  2015-09-30-jekyll-everything.md  2016-04-08-jetset-ape.md
old-personal-website-2/_sass/: _blog.scss  _globals.scss  _homepage.scss  _settings.scss  (+2 more)
pandemic/: board.yml  main.go  map.go
pattern-library/: _config.yml  gulpfile.js  index.html  package.json
primes/: README.MD
python_toys/: ridge.py  trekking.py
shelfish/: .gitignore  go.mod  go.sum  handlers.go  main.go
shelfish-ui/: .gitignore  README.md  bun.lockb  package.json  tailwind.config.js  todo.md  tsconfig.json
slashthread/: README.md  package.json  service.js
slashthread-api/: README.md  controllers.js  handlers.js  index.js  package.json
spectral/: README.md  main.html
tott/: README.md  now.json  package-lock.json  package.json
transcribe/: README.md  transcribe_audio.py
weddingdatasync/: app.mjs  controllers.mjs  d1.mjs  package-lock.json  package.json  schema.sql  wrangler.toml
weddingsubmissions/: package-lock.json  package.json  wrangler.toml
wpboilerplate/: 404.php  category.php  content-page.php  content-single.php  content.php  footer.php  functions.php  header.php  index.php  page.php  sidebar.php  single.php  style.css
(+195 files in other folders)
