[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-modem"
version = "0.1.0"
description = "AFSK audio modem toolkit"
authors = [{ name = "Jack Reid" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "sounddevice>=0.5",
    "rich>=13.0",
    "typer>=0.12",
]

[project.scripts]
send-text = "apps.send_text:app"
recv-text = "apps.recv_text:app"

[tool.hatch.build.targets.wheel]
packages = ["modem"]

[tool.hatch.build.targets.sdist]
include = ["modem", "apps", "tests", "PLAN.md", "README.md"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
addopts = "--strict-markers --disable-warnings"
testpaths = ["tests"]

